ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http: # <--- Quitamos la línea 'host: mario.local'
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mario-service
            port:
              number: 80
